# pdp

./: .bazelignore  .gitignore  BUILD.bazel  Cargo.toml  Makefile  README.md  WORKSPACE  genprotodeps.go  go.mod  go.sum  go_repositories.bzl  implicitdeps.go  kind_with_registry.sh  maven_install.json  placeholder_bin.rs  placeholder_lib.rs  tools.go  tools.mk
adventofcode/adventofcode_go_proto/: BUILD.bazel  adventofcode.pb.go  adventofcode_grpc.pb.go
adventofcode/aocgen/: BUILD.bazel  main.go
adventofcode/aocgen/cmd/aocgen/: BUILD.bazel  main.go
adventofcode/aocgen/testing/: BUILD.bazel  aocgen.go
adventofcode/aoctool/: BUILD.bazel  main.go
adventofcode/aoctool/cmd/: BUILD.bazel  root.go
adventofcode/aoctool/cmd/fetch/: BUILD.bazel  fetch.go
adventofcode/aoctool/cmd/generate/: BUILD.bazel  generate.go
adventofcode/data/get/: BUILD.bazel
adventofcode/java/: BUILD.bazel
adventofcode/java/geo/: BUILD.bazel  Point2D.java
adventofcode/java/result/: BUILD.bazel  Result.java
adventofcode/java/src/benchmark/: BUILD.bazel
adventofcode/java/tuple/: BUILD.bazel  Tuple2.java  Tuple3.java
adventofcode/java/year2016/assembunny/: BUILD.bazel  VM.java  VMTest.java
adventofcode/java/year2016/day01/: BUILD.bazel  Day01.java  Day01Benchmark.java  Day01Test.java
adventofcode/java/year2016/day02/: BUILD.bazel  Day02.java  Day02Benchmark.java  Day02Test.java
adventofcode/java/year2016/day03/: BUILD.bazel  Day03.java  Day03Benchmark.java  Day03Test.java
adventofcode/java/year2016/day04/: BUILD.bazel  Day04.java  Day04Benchmark.java  Day04Test.java
adventofcode/java/year2016/day05/: BUILD.bazel  Day05.java  Day05Benchmark.java  Day05Test.java
adventofcode/java/year2016/day06/: BUILD.bazel  Day06.java  Day06Benchmark.java  Day06Test.java
adventofcode/java/year2016/day07/: BUILD.bazel  Day07.java  Day07Benchmark.java  Day07Test.java
adventofcode/java/year2016/day08/: BUILD.bazel  Day08.java  Day08Benchmark.java  Day08Test.java
adventofcode/java/year2016/day09/: BUILD.bazel  Day09.java  Day09Benchmark.java  Day09Test.java
adventofcode/java/year2016/day10/: BUILD.bazel  Day10.java  Day10Benchmark.java  Day10Test.java
adventofcode/java/year2016/day11/: BUILD.bazel  Day11.java  Day11Benchmark.java  Day11Test.java
adventofcode/java/year2016/day12/: BUILD.bazel  Day12.java  Day12Benchmark.java  Day12Test.java
adventofcode/java/year2016/day13/: BUILD.bazel  Day13.java  Day13Benchmark.java  Day13Test.java
adventofcode/java/year2016/day14/: BUILD.bazel  Day14.java  Day14Benchmark.java  Day14Test.java
adventofcode/java/year2016/day15/: BUILD.bazel  Day15.java  Day15Benchmark.java  Day15Test.java
adventofcode/java/year2016/day16/: BUILD.bazel  Day16.java  Day16Benchmark.java  Day16Test.java
adventofcode/java/year2016/day17/: BUILD.bazel  Day17.java  Day17Benchmark.java  Day17Test.java
adventofcode/java/year2016/day18/: BUILD.bazel  Day18.java  Day18Benchmark.java  Day18Test.java
adventofcode/java/year2016/day19/: BUILD.bazel  Day19.java  Day19Benchmark.java  Day19Test.java
adventofcode/java/year2016/day20/: BUILD.bazel  Day20.java  Day20Benchmark.java  Day20Test.java
adventofcode/java/year2016/day21/: BUILD.bazel  Day21.java  Day21Benchmark.java  Day21Test.java
adventofcode/java/year2016/day22/: BUILD.bazel  Day22.java  Day22Benchmark.java  Day22Test.java
adventofcode/java/year2016/day23/: BUILD.bazel  Day23.java  Day23Benchmark.java  Day23Test.java
adventofcode/java/year2016/day24/: BUILD.bazel  Day24.java  Day24Benchmark.java  Day24Test.java
adventofcode/java/year2016/day25/: BUILD.bazel  Day25.java  Day25Benchmark.java  Day25Test.java
adventofcode/rust_old/: BUILD.bazel
adventofcode/rust_old/src/: lib.rs  main.rs
adventofcode/rust_old/src/year2017/: day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  (+4 more)
aip/fieldbehavior/: BUILD.bazel  outputonly.go  outputonly_test.go
aip/fieldbehavior/testing/: testing.proto
aip/fieldmask/: BUILD.bazel  doc.go  fieldmask.go  fieldmask_test.go  testcases.md  update.go  update_test.go  validate.go  validate_test.go
aip/fieldmask/example/: BUILD.bazel  example.proto
aip/fieldmask/testing/: BUILD.bazel  testing.proto
aip/pagetoken/: BUILD.bazel  example.proto  page_token.proto  pagetoken.go  pagetoken_test.go
aip/pagetoken/internal/: page_token.proto
aip/pagetoken/page_token_go_proto/: example.pb.go  page_token.pb.go
aip/resource/: BUILD.bazel  descriptor.go  descriptor_test.go  lookup.go  lookup_test.go
aip/resourcename/: BUILD.bazel  example_test.go  resourcename.go  resourcename_test.go
container/fibheap/: BUILD.bazel  fibheap.go  fibheap_test.go
finance/finance_go_proto/: BUILD.bazel  finance.pb.go  finance_grpc.pb.go
finance/server/: BUILD.bazel  patterns.go  server.go  server_account_test.go  server_utils_for_test.go
postgres/postgrestest/: BUILD.bazel  postgrestest.go  postgrestest_test.go  testschema.sql
tasks/: BUILD.bazel  main.go  tasks.proto  testcases.md
tasks/cmd/server/: BUILD.bazel  main.go
tasks/database/: BUILD.bazel  schema.sql
tasks/server/: BUILD.bazel  deployment.yaml  main.go  server.go  server_test.go
tasks/service/: BUILD.bazel  integration_test.go  service.go
tasks/tasks_go_proto/: BUILD.bazel  tasks.pb.go  tasks_grpc.pb.go
tasks2/server/: BUILD.bazel  resources.go  server.go  server_adddependency_test.go  server_addlabel_test.go  server_completetask_test.go  server_createlabel_test.go  server_createtask_test.go  server_getlabel_test.go  server_gettask_test.go  server_listevents_test.go  server_listlabels_test.go  server_listtasks_test.go  server_removedependency_test.go  server_removelabel_test.go  server_uncompletetask_test.go  server_updatelabel_test.go  server_updatetask_test.go  server_utils_for_test.go
tasks3/server/: BUILD.bazel  main.go
tasks3/service/: BUILD.bazel  service.go
tasks3/tasks3_go_proto/: BUILD.bazel  tasks3.pb.go  tasks3_grpc.pb.go
testing/grpctest/: BUILD.bazel  errtest.go  grpctest.go
testing/postgrestest/: BUILD.bazel  postgrestest.go
wellknown/money/: BUILD.bazel  validate.go  validate_test.go
(+935 files in other folders)
