load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude _tools
# gazelle:prefix github.com/Saser/pdp
# gazelle:proto disable_global

gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "kind_with_registry",
    srcs = ["kind_with_registry.sh"],
    data = ["@io_k8s_sigs_kind//:kind"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
