[package]
name = "aoc"
version = "0.1.0"
authors = ["Christian Persson <saser@live.se>"]
edition = "2018"

[lib]
name = "placeholder"
path = "placeholder_lib.rs"

[[bin]]
name = "placeholder"
path = "placeholder_bin.rs"

[dependencies]
chrono = "0.4"
lazy_static = "1.2.0"
nalgebra = "0.16"
regex = "1"

[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Remote"
