load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tasks_lib",
    srcs = ["main.go"],
    importpath = "github.com/Saser/pdp/tasks",
    visibility = ["//visibility:private"],
    deps = [
        "//saser/pdp/tasks/v1:tasks",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "tasks",
    embed = [":tasks_lib"],
    visibility = ["//visibility:public"],
)
