load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "taskspb_proto",
    srcs = ["tasks.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:field_mask_proto"],
)

go_proto_library(
    name = "taskspb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Saser/pdp/tasks/tasks_go_proto",
    proto = ":taskspb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "tasks_go_proto",
    embed = [":taskspb_go_proto"],
    importpath = "github.com/Saser/pdp/tasks/tasks_go_proto",
    visibility = ["//visibility:public"],
)
