load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "aoctool_lib",
    srcs = ["main.go"],
    importpath = "github.com/Saser/pdp/adventofcode/aoctool",
    visibility = ["//visibility:private"],
    deps = ["//adventofcode/aoctool/cmd"],
)

go_binary(
    name = "aoctool",
    embed = [":aoctool_lib"],
    visibility = ["//visibility:public"],
)
