load("@rules_java//java:defs.bzl", "java_plugin")

java_plugin(
    name = "benchmark_annotation_processor",
    processor_class = "org.openjdk.jmh.generators.BenchmarkProcessor",
    visibility = ["//adventofcode/java:__subpackages__"],
    deps = ["@maven//:org_openjdk_jmh_jmh_generator_annprocess"],
)
