load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "aoc",
    srcs = glob([
        "src/base/*.rs",
        "src/year2018/*.rs",
    ]) + ["src/lib.rs"],
    deps = [
        "//cargo:chrono",
        "//cargo:lazy_static",
        "//cargo:nalgebra",
        "//cargo:rayon",
        "//cargo:regex",
    ],
)

rust_binary(
    name = "aoc_bin",
    srcs = ["src/main.rs"],
    deps = [
        ":aoc",
        "//cargo:clap",
    ],
)

rust_test(
    name = "aoc_test",
    compile_data = [
        "//adventofcode/inputs:2018/01",
        "//adventofcode/inputs:2018/02",
        "//adventofcode/inputs:2018/03",
        "//adventofcode/inputs:2018/04",
        "//adventofcode/inputs:2018/05",
        "//adventofcode/inputs:2018/06",
        "//adventofcode/inputs:2018/07",
        "//adventofcode/inputs:2018/08",
        "//adventofcode/inputs:2018/09",
        "//adventofcode/inputs:2018/10",
        "//adventofcode/inputs:2018/11",
        "//adventofcode/inputs:2018/12",
        "//adventofcode/inputs:2018/13",
        "//adventofcode/inputs:2018/14",
        "//adventofcode/inputs:2018/15",
        "//adventofcode/inputs:2018/16",
        "//adventofcode/inputs:2018/17",
        "//adventofcode/inputs:2018/18",
        "//adventofcode/inputs:2018/19",
        "//adventofcode/inputs:2018/20",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p1ex1",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p1ex2",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p1ex3",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p1ex4",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p2ex1",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p2ex2",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p2ex3",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p2ex4",
        "//adventofcode/rust_old/src/year2018/testdata/day01:p2ex5",
        "//adventofcode/rust_old/src/year2018/testdata/day02:p1ex",
        "//adventofcode/rust_old/src/year2018/testdata/day02:p2ex",
        "//adventofcode/rust_old/src/year2018/testdata/day03:ex",
        "//adventofcode/rust_old/src/year2018/testdata/day04:ex",
        "//adventofcode/rust_old/src/year2018/testdata/day06:ex",
        "//adventofcode/rust_old/src/year2018/testdata/day07:ex",
        "//adventofcode/rust_old/src/year2018/testdata/day10:actual.out",
        "//adventofcode/rust_old/src/year2018/testdata/day10:ex.in",
        "//adventofcode/rust_old/src/year2018/testdata/day10:ex.out",
        "//adventofcode/rust_old/src/year2018/testdata/day12:ex",
        "//adventofcode/rust_old/src/year2018/testdata/day13:ex1",
        "//adventofcode/rust_old/src/year2018/testdata/day13:ex2",
        "//adventofcode/rust_old/src/year2018/testdata/day15:ex1",
        "//adventofcode/rust_old/src/year2018/testdata/day15:ex2",
        "//adventofcode/rust_old/src/year2018/testdata/day15:ex3",
        "//adventofcode/rust_old/src/year2018/testdata/day15:ex4",
        "//adventofcode/rust_old/src/year2018/testdata/day15:ex5",
        "//adventofcode/rust_old/src/year2018/testdata/day15:ex6",
        "//adventofcode/rust_old/src/year2018/testdata/day17:ex",
        "//adventofcode/rust_old/src/year2018/testdata/day18:ex",
    ],
    crate = ":aoc",
    rustc_env = {
        "YEAR2018_DAY01": "$(location //adventofcode/inputs:2018/01)",
        "YEAR2018_DAY01_P1EX1": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p1ex1)",
        "YEAR2018_DAY01_P1EX2": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p1ex2)",
        "YEAR2018_DAY01_P1EX3": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p1ex3)",
        "YEAR2018_DAY01_P1EX4": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p1ex4)",
        "YEAR2018_DAY01_P2EX1": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p2ex1)",
        "YEAR2018_DAY01_P2EX2": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p2ex2)",
        "YEAR2018_DAY01_P2EX3": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p2ex3)",
        "YEAR2018_DAY01_P2EX4": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p2ex4)",
        "YEAR2018_DAY01_P2EX5": "$(location //adventofcode/rust_old/src/year2018/testdata/day01:p2ex5)",
        "YEAR2018_DAY02": "$(location //adventofcode/inputs:2018/02)",
        "YEAR2018_DAY02_P1EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day02:p1ex)",
        "YEAR2018_DAY02_P2EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day02:p2ex)",
        "YEAR2018_DAY03": "$(location //adventofcode/inputs:2018/03)",
        "YEAR2018_DAY03_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day03:ex)",
        "YEAR2018_DAY04": "$(location //adventofcode/inputs:2018/04)",
        "YEAR2018_DAY04_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day04:ex)",
        "YEAR2018_DAY05": "$(location //adventofcode/inputs:2018/05)",
        "YEAR2018_DAY06": "$(location //adventofcode/inputs:2018/06)",
        "YEAR2018_DAY06_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day06:ex)",
        "YEAR2018_DAY07": "$(location //adventofcode/inputs:2018/07)",
        "YEAR2018_DAY07_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day07:ex)",
        "YEAR2018_DAY08": "$(location //adventofcode/inputs:2018/08)",
        "YEAR2018_DAY09": "$(location //adventofcode/inputs:2018/09)",
        "YEAR2018_DAY10": "$(location //adventofcode/inputs:2018/10)",
        "YEAR2018_DAY10_ACTUAL_OUT": "$(location //adventofcode/rust_old/src/year2018/testdata/day10:actual.out)",
        "YEAR2018_DAY10_EX_IN": "$(location //adventofcode/rust_old/src/year2018/testdata/day10:ex.in)",
        "YEAR2018_DAY10_EX_OUT": "$(location //adventofcode/rust_old/src/year2018/testdata/day10:ex.out)",
        "YEAR2018_DAY11": "$(location //adventofcode/inputs:2018/11)",
        "YEAR2018_DAY12": "$(location //adventofcode/inputs:2018/12)",
        "YEAR2018_DAY12_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day12:ex)",
        "YEAR2018_DAY13": "$(location //adventofcode/inputs:2018/13)",
        "YEAR2018_DAY13_EX1": "$(location //adventofcode/rust_old/src/year2018/testdata/day13:ex1)",
        "YEAR2018_DAY13_EX2": "$(location //adventofcode/rust_old/src/year2018/testdata/day13:ex2)",
        "YEAR2018_DAY14": "$(location //adventofcode/inputs:2018/14)",
        "YEAR2018_DAY15": "$(location //adventofcode/inputs:2018/15)",
        "YEAR2018_DAY15_EX1": "$(location //adventofcode/rust_old/src/year2018/testdata/day15:ex1)",
        "YEAR2018_DAY15_EX2": "$(location //adventofcode/rust_old/src/year2018/testdata/day15:ex2)",
        "YEAR2018_DAY15_EX3": "$(location //adventofcode/rust_old/src/year2018/testdata/day15:ex3)",
        "YEAR2018_DAY15_EX4": "$(location //adventofcode/rust_old/src/year2018/testdata/day15:ex4)",
        "YEAR2018_DAY15_EX5": "$(location //adventofcode/rust_old/src/year2018/testdata/day15:ex5)",
        "YEAR2018_DAY15_EX6": "$(location //adventofcode/rust_old/src/year2018/testdata/day15:ex6)",
        "YEAR2018_DAY16": "$(location //adventofcode/inputs:2018/16)",
        "YEAR2018_DAY17": "$(location //adventofcode/inputs:2018/17)",
        "YEAR2018_DAY17_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day17:ex)",
        "YEAR2018_DAY18": "$(location //adventofcode/inputs:2018/18)",
        "YEAR2018_DAY18_EX": "$(location //adventofcode/rust_old/src/year2018/testdata/day18:ex)",
        "YEAR2018_DAY19": "$(location //adventofcode/inputs:2018/19)",
        "YEAR2018_DAY20": "$(location //adventofcode/inputs:2018/20)",
    },
)
