load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pagetoken",
    srcs = ["pagetoken.go"],
    importpath = "github.com/Saser/pdp/aip/pagetoken",
    visibility = ["//visibility:public"],
    deps = [
        ":page_token_go_proto_go_proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "pagetoken_test",
    srcs = ["pagetoken_test.go"],
    embed = [":pagetoken"],
    deps = [":page_token_go_proto_go_proto"],
)

proto_library(
    name = "page_token_go_proto_proto",
    srcs = [
        "example.proto",
        "page_token.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "page_token_go_proto_go_proto",
    importpath = "github.com/Saser/pdp/aip/pagetoken/page_token_go_proto",
    proto = ":page_token_go_proto_proto",
    visibility = ["//visibility:public"],
)
