load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pagetoken",
    srcs = ["pagetoken.go"],
    importpath = "github.com/Saser/pdp/aip/pagetoken",
    visibility = ["//visibility:public"],
    deps = [
        "//aip/pagetoken/internal/page_token_go_proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "pagetoken_test",
    srcs = ["pagetoken_test.go"],
    embed = [":pagetoken"],
    deps = ["//aip/pagetoken/internal/testing/testing_go_proto"],
)
