load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "finance_go_proto",
    srcs = [
        "finance.pb.go",
        "finance_grpc.pb.go",
    ],
    importpath = "github.com/Saser/pdp/finance/finance_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto//googleapis/api/annotations",
        "@org_golang_google_genproto//googleapis/type/money",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
    ],
)
