load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@k8s_local_object//:defaults.bzl", "k8s_local_object")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Saser/pdp/tasks/server",
    visibility = ["//visibility:private"],
    deps = [
        "//tasks/service",
        "//tasks/tasks_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "server_image",
    binary = ":server",
)

k8s_local_object(
    name = "local_deployment",
    images = {
        "bazel/tasks/server:server_image": ":server_image",
    },
    kind = "deployment",
    template = "deployment.yaml",
)
