load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "resources.go",
        "server.go",
    ],
    importpath = "github.com/Saser/pdp/tasks2/server",
    visibility = ["//visibility:public"],
    deps = [
        "//aip/pagetoken",
        "//aip/resource",
        "//aip/resourcename",
        "//tasks2/tasks_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "server_adddependency_test.go",
        "server_addlabel_test.go",
        "server_createlabel_test.go",
        "server_createtask_test.go",
        "server_getlabel_test.go",
        "server_gettask_test.go",
        "server_listevents_test.go",
        "server_listlabels_test.go",
        "server_listtasks_test.go",
        "server_removedependency_test.go",
        "server_removelabel_test.go",
        "server_utils_for_test.go",
    ],
    embed = [":server"],
    deps = [
        "//tasks2/tasks_go_proto",
        "//testing/errtest",
        "//testing/grpctest",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
