load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "postgrestest",
    srcs = ["postgrestest.go"],
    importpath = "github.com/Saser/pdp/testing/postgrestest",
    visibility = ["//visibility:public"],
    deps = [
        "//postgres",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_ory_dockertest_v3//:dockertest",
    ],
)
