load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "money",
    srcs = ["validate.go"],
    importpath = "github.com/Saser/pdp/wellknown/money",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto//googleapis/type/money"],
)

go_test(
    name = "money_test",
    srcs = ["validate_test.go"],
    embed = [":money"],
    deps = [
        "//testing/errtest",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_genproto//googleapis/type/money",
    ],
)
