load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/Saser/pdp/adventofcode/aoctool/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//adventofcode/aoctool/cmd/fetch",
        "//adventofcode/aoctool/cmd/generate",
        "@com_github_spf13_cobra//:cobra",
    ],
)
