load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "get_lib",
    srcs = ["get.go"],
    importpath = "github.com/Saser/pdp/adventofcode/data/get",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_net//publicsuffix",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "get",
    embed = [":get_lib"],
    visibility = ["//visibility:public"],
)
